<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.nicbill.assistantrainbowsixsiege.MainMenuActivity">

    <ImageView
        android:id="@+id/assistantLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/logoassist"
        android:src="@drawable/rainbow_logo" />

    <Button
        android:id="@+id/btnOperateurs"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@+id/assistantLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="@color/colorAccent2"
        android:text="@string/Operateurs"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnArmes"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/btnOperateurs"
        android:layout_below="@+id/btnOperateurs"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent2"
        android:text="@string/Armes"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCartes"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/btnArmes"
        android:layout_below="@+id/btnArmes"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent"
        android:text="@string/Cartes"
        android:textSize="20sp"
        android:visibility="gone"/>

</RelativeLayout>
